# variant-pointer

./: .clang-tidy  CMakeLists.txt  CMakePresets.json
.github/workflows/: clang-build.yml  gcc-build.yml
cmake/: lto.helper.cmake  tidy.helper.cmake
include/: variant_pointer.hh
include/detail/: conjunction.hh  disjunction.hh  index_of.hh
src/: variant_pointer.cc
src/detail/: conjunction.cc  disjunction.cc  index_of.cc
test/: construct.cc
